@@ -4,7 +4,8 @@
   Updated ApacheInstaller to ask for user/group, prior was setting it to root. witch would make the site inaccessible
   Added option to manager-config to keep backups of the player/alliance data. OFF by default.
   Added dropdown for viewing backups of Player data.
-  
+  Fixed (i hope) UpdateManager script
+
 1.1.6
   Moved player count/list to server log
   Added cronjob to refresh server log every 30seconds
